@@ -2,5 +2,6 @@
 seablock.overwrite_setting('bool-setting', 'angels-disable-bobs-electrolysers', true)
 seablock.overwrite_setting('bool-setting', 'angels-disable-bobs-chemical-plants', true)
 seablock.overwrite_setting('bool-setting', 'angels-disable-bobs-distilleries', true)
+seablock.overwrite_setting('bool-setting', 'angels-enable-acids', true)
 
 seablock.set_setting_default_value('bool-setting', 'angels-enable-converter', false)
