@@ -1,0 +1,8 @@
+-- Angel's Refining
+seablock.overwrite_setting('bool-setting', 'angels-starting-resource-ore1', false)
+seablock.overwrite_setting('bool-setting', 'angels-starting-resource-ore2', false)
+seablock.overwrite_setting('bool-setting', 'angels-starting-resource-ore3', false)
+seablock.overwrite_setting('bool-setting', 'angels-starting-resource-ore4', false)
+seablock.overwrite_setting('bool-setting', 'angels-starting-resource-ore5', false)
+seablock.overwrite_setting('bool-setting', 'angels-starting-resource-ore6', false)
+seablock.overwrite_setting('double-setting', 'angels-starting-resource-base', 40000)
