@@ -1,0 +1,5 @@
+-- Bob's Adjustable Inserters mod
+if mods['bobinserters'] then
+  seablock.set_setting_default_value('bool-setting', 'bobmods-inserters-long2', false)
+  seablock.set_setting_default_value('bool-setting', 'bobmods-inserters-more2', false)
+end
