@@ -1,0 +1,5 @@
+-- Bob's Ores mod
+if mods['bobores'] then
+  seablock.overwrite_setting('bool-setting', 'bobmods-ores-infiniteore', false)
+  seablock.overwrite_setting('bool-setting', 'bobmods-ores-enablewaterores', false)
+end
