@@ -1,3 +1,5 @@
 -- Bob's Metals, Chemicals and Intermediates
 seablock.overwrite_setting('bool-setting', 'bobmods-plates-cheapersteel', false)
+seablock.overwrite_setting('bool-setting', 'bobmods-plates-newsteel', false)
 seablock.overwrite_setting('bool-setting', 'bobmods-plates-nuclearupdate', true)
+seablock.overwrite_setting('bool-setting', 'bobmods-plates-expensive-electrolysis', false)
