@@ -1,0 +1,7 @@
+-- Bob's Power mod
+if mods['bobpower'] then
+  seablock.set_setting_default_value('bool-setting', 'bobmods-power-solar', false)
+  seablock.set_setting_default_value('bool-setting', 'bobmods-power-accumulators', false)
+  seablock.set_setting_default_value('bool-setting', 'bobmods-power-fluidgenerator', false)
+  seablock.set_setting_default_value('bool-setting', 'bobmods-power-burnergenerator', false)
+end
