@@ -1,0 +1,6 @@
+-- Bob's Revamp mod
+if mods['bobrevamp'] then
+  seablock.overwrite_setting('bool-setting', 'bobmods-revamp-old-oil', true)
+  seablock.overwrite_setting('bool-setting', 'bobmods-revamp-oil', true)
+  seablock.overwrite_setting('bool-setting', 'bobmods-revamp-hardmode', true)
+end
