@@ -14,6 +14,7 @@ Date: ???
     - Reduced lime and time required for Porus lime filters
     - Reduced time required for Sulfur air scrubbing
     - Reduced cost of mud landfill
+    - Hid settings from other mods that have no effect with Sea Block 
   Bugfixes:
     - Fixed crash when Train Construction Site is enabled
   Info:
